--- a/index.html
+++ b/index.html
@@ -14,47 +14,68 @@
         <p id="status">Loading model...</p>
     </div>
 
-    <!-- Include TensorFlow.js and Teachable Machine Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4"></script>
+<div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">Start</button>
+<div id="webcam-container"></div>
+<div id="label-container"></div>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+<script type="text/javascript">
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-    <!-- Your Custom JavaScript Code -->
-    <script>
-        let model;
-        async function loadModel() {
-            try {
-                // Load the model
-                model = await tmImage.load('https://ilovepython-47.github.io/sorting/model.json');
-                console.log("Model loaded!");
-                document.getElementById('status').innerHTML = "Model Loaded!";
-                
-                // Set up webcam
-                const webcam = await tmImage.Webcam.create();
-                try {
-                  await webcam.setup(); // Request webcam access
-                  await webcam.play();
-                  console.log("Webcam is working");
-                  document.getElementById('container').appendChild(webcam.canvas);
-                } catch (err) {
-                  console.log("Webcam setup failed", err);
-                }
-                
-                // Start predictions
-                predict(webcam);
-            } catch (error) {
-                console.error('Error loading model or webcam:', error);
-                document.getElementById('status').innerHTML = "Error loading model or webcam.";
-            }
+    // the link to your model provided by Teachable Machine export panel
+    const URL = "https://ilovepython-47.github.io/sorting/";
+
+    let model, webcam, labelContainer, maxPredictions;
+
+    // Load the image model and setup the webcam
+    async function init() {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
+
+        // load the model and metadata
+        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+        // or files from your local hard drive
+        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+        model = await tmImage.load(modelURL, metadataURL);
+        maxPredictions = model.getTotalClasses();
+
+        // Convenience function to setup a webcam
+        const flip = true; // whether to flip the webcam
+        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+        await webcam.setup(); // request access to the webcam
+        await webcam.play();
+        window.requestAnimationFrame(loop);
+
+        // append elements to the DOM
+        document.getElementById("webcam-container").appendChild(webcam.canvas);
+        labelContainer = document.getElementById("label-container");
+        for (let i = 0; i < maxPredictions; i++) { // and class labels
+            labelContainer.appendChild(document.createElement("div"));
         }
+    }
 
-        async function predict(webcam) {
-            const predictions = await model.predict(webcam.canvas);
-            console.log(predictions);
-            requestAnimationFrame(() => predict(webcam));
+    async function loop() {
+        webcam.update(); // update the webcam frame
+        await predict();
+        window.requestAnimationFrame(loop);
+    }
+
+    // run the webcam image through the image model
+    async function predict() {
+        // predict can take in an image, video or canvas html element
+        const prediction = await model.predict(webcam.canvas);
+        for (let i = 0; i < maxPredictions; i++) {
+            const classPrediction =
+                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            labelContainer.childNodes[i].innerHTML = classPrediction;
         }
+    }
+</script>
 
-        window.onload = loadModel;
-    </script>
+
+   
 </body>
 </html>
 
