--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Your Teachable Machine Model</title>
     <style>
         body {
-            font-family: Arial, sans-serif; /* Change to Arial */
+            font-family: Arial, sans-serif;
+            color: white; /* Set text color to white */
+            background-color: #013220; /* Dark green background */
         }
-        /* Alternatively, use Calibri like this:
-        body {
-            font-family: Calibri, sans-serif;
-        }
-        */
     </style>
 </head>
 <body>
