--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Teachable Machine Model</title>
+    <title>Explore AI with My Interactive Model</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: white; /* Set text color to white */
-            background-color: #013220; /* Dark green background */
+            color: white;
+            background-color: #013220;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Teachable Machine Model</h1>
-    <p>This is a simple example of a Teachable Machine model embedded on my site.</p>
+    <h1>Hey! Do you know what your trash type is? Let's find out and help the planet!</h1>
+    <p>Get ready to identify different types of trash using my Teachable Machine model. Together, we can learn about proper sorting and disposal to make a positive impact on our environment.</p>
 
     <div>Teachable Machine Image Model</div>
     <button type="button" onclick="init()">Start</button>
