--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </style>
 </head>
 <body>
-    <h1>Hey! Do you know what your trash type is? Let's find out and help the planet!</h1>
-    <p>Get ready to identify different types of trash using my Teachable Machine model. Together, we can learn about proper sorting and disposal to make a positive impact on our environment.</p>
+    <h1>Này! Bạn có biết loại rác của bạn là gì không? Hãy cùng tìm hiểu và giúp đỡ hành tinh này nhé!</h1>
+    <p>Hãy chuẩn bị để nhận dạng các loại rác khác nhau bằng mô hình Teachable Machine của tôi. Cùng nhau, chúng ta có thể tìm hiểu về cách phân loại và xử lý rác đúng cách để tạo ra tác động tích cực đến môi trường của chúng ta.</p>
 
     <div>Teachable Machine Image Model</div>
     <button type="button" onclick="init()">Start</button>
