--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
         body {
             font-family: Arial, sans-serif;
             color: white;
-            background-color: #013220;
+            background-color: #013220; /* Dark green background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        #content {
+            max-width: 600px;
+            width: 100%;
         }
     </style>
 </head>
