--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
             font-family: Arial, sans-serif;
             color: white;
             background-color: #013220; /* Dark green background */
-            display: flex;
+            text-align: center;
+           /* display: flex; 
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            text-align: center;
+            */
         }
         #content {
             max-width: 600px;
