--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
             font-family: Arial, sans-serif;
             color: white;
             background-color: #013220; /* Dark green background */
-            text-align: center;
-           /* display: flex; 
+            display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            */
+            text-align: center;
         }
         #content {
             max-width: 600px;
             width: 100%;
+        }
+        h1, p, div, button {
+            margin-bottom: 15px; /* Add space between elements */
         }
     </style>
 </head>
