--- a/index.html
+++ b/index.html
@@ -20,19 +20,33 @@
             max-width: 600px;
             width: 100%;
         }
+         /* Đảm bảo các dòng label hiển thị dọc */
+        #label-container div {
+            display: block;
+            margin: 5px 0; /* Thêm khoảng cách giữa các dòng */
+        }
         h1, p, div, button {
             margin-bottom: 15px; /* Add space between elements */
         }
     </style>
 </head>
 <body>
-    <h1>Này! Bạn có biết loại rác của bạn là gì không? Hãy cùng tìm hiểu và giúp đỡ hành tinh này nhé!</h1>
+
+    <div id="content">
+        <h1>Này! Bạn có biết loại rác của bạn là gì không? Hãy cùng tìm hiểu và giúp đỡ hành tinh này nhé!</h1>
+        <p>Hãy chuẩn bị để nhận dạng các loại rác khác nhau bằng mô hình Teachable Machine của tôi. Cùng nhau, chúng ta có thể tìm hiểu về cách phân loại và xử lý rác đúng cách để tạo ra tác động tích cực đến môi trường của chúng ta.</p>
+
+        <button type="button" onclick="init()">Bắt đầu</button>
+        <div id="webcam-container"></div>
+        <div id="label-container"></div>
+    </div>
+   <!-- <h1>Này! Bạn có biết loại rác của bạn là gì không? Hãy cùng tìm hiểu và giúp đỡ hành tinh này nhé!</h1>
     <p>Hãy chuẩn bị để nhận dạng các loại rác khác nhau bằng mô hình Teachable Machine của tôi. Cùng nhau, chúng ta có thể tìm hiểu về cách phân loại và xử lý rác đúng cách để tạo ra tác động tích cực đến môi trường của chúng ta.</p>
 
     <div>Teachable Machine Image Model</div>
     <button type="button" onclick="init()">Start</button>
     <div id="webcam-container"></div>
-    <div id="label-container"></div>
+    <div id="label-container"></div>  -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
